2차 커밋 1. 로그인/로그아웃 기능 구현 (http session 반영을 통해 로그인 유지 및 유저 정보 불러오기 가능) -------------------- 1차 커밋 1. 회원 가입 2. OTT 모임 개설 (수정)

--- a/ott_project/build.gradle
+++ b/ott_project/build.gradle
@@ -23,18 +23,17 @@ dependencies {
 	testImplementation 'junit:junit:4.13.1'
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.8.1'
 	runtimeOnly 'com.h2database:h2'
-	/*testImplementation('org.springframework.boot:spring-boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}*/
 	annotationProcessor 'org.projectlombok:lombok:1.18.22'
 	compileOnly 'org.projectlombok:lombok:1.18.22'
 	testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 	testCompileOnly 'org.projectlombok:lombok:1.18.22'
+
 	testImplementation("org.junit.vintage:junit-vintage-engine") {
 				exclude group: "org.hamcrest", module: "hamcrest-core"
 	}
 	implementation group: 'io.springfox', name: 'springfox-boot-starter', version: '3.0.0'
 	implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '3.0.0'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
 }
 
